--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,3 @@
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/1906_mybatis?serverTimezone=GMT%2B8
+db.url=jdbc:mysql://localhost:3306/project?serverTimezone=GMT%2B8
 db.username=root
 db.password=root
